--- a/Diagnosis/DiagnosisApp.csproj
+++ b/Diagnosis/DiagnosisApp.csproj
@@ -182,6 +182,7 @@
       <DependentUpon>Card2.xaml</DependentUpon>
     </Compile>
     <Compile Include="Styles\TreeStyle.cs" />
+    <Compile Include="ViewModels\RelayCommand.cs" />
     <Compile Include="ViewModels\SearchViewModel.cs" />
     <Compile Include="ViewModels\SymptomViewModel.cs" />
     <Compile Include="Controls\FullTree.xaml.cs">
