--- a/Diagnosis/DiagnosisApp.csproj
+++ b/Diagnosis/DiagnosisApp.csproj
@@ -172,7 +172,6 @@
     <Compile Include="Converters\CountToVisability.cs" />
     <Compile Include="Converters\SymptomToBackground.cs" />
     <Compile Include="Converters\NegateBool.cs" />
-    <Compile Include="Converters\TileTypeToColor.cs" />
     <Compile Include="Converters\TreeDepthToMargin.cs" />
     <Compile Include="DataCreator.cs" />
     <Compile Include="Helpers\ChildFinder.cs" />
@@ -194,13 +193,13 @@
       <DependentUpon>Card2.xaml</DependentUpon>
     </Compile>
     <Compile Include="Styles\TreeStyle.cs" />
+    <Compile Include="ViewModels\SymptomExplorerViewModel.cs" />
     <Compile Include="ViewModels\RelayCommand.cs" />
     <Compile Include="ViewModels\SearchViewModel.cs" />
     <Compile Include="ViewModels\SymptomViewModel.cs" />
     <Compile Include="Controls\FullTree.xaml.cs">
       <DependentUpon>FullTree.xaml</DependentUpon>
     </Compile>
-    <Compile Include="ViewModels\TileViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
     <Compile Include="ViewModels\PatientViewModel.cs" />
     <Page Include="Controls\Forms\AgePicker.xaml">
