--- a/Diagnosis/DiagnosisApp.csproj
+++ b/Diagnosis/DiagnosisApp.csproj
@@ -143,6 +143,9 @@
     <Compile Include="Controls\Forms\ComboBoxDatePicker.xaml.cs">
       <DependentUpon>ComboBoxDatePicker.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\Forms\PropertiesChooser.xaml.cs">
+      <DependentUpon>PropertiesChooser.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\Forms\EducationChooser.xaml.cs">
       <DependentUpon>EducationChooser.xaml</DependentUpon>
     </Compile>
@@ -212,6 +215,10 @@
     <Page Include="Controls\Forms\ComboBoxDatePicker.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\Forms\PropertiesChooser.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Controls\Forms\EducationChooser.xaml">
       <SubType>Designer</SubType>
