--- a/Diagnosis/DiagnosisApp.csproj
+++ b/Diagnosis/DiagnosisApp.csproj
@@ -184,6 +184,7 @@
     <Compile Include="DataCreator.cs" />
     <Compile Include="Helpers\ChildFinder.cs" />
     <Compile Include="Helpers\EnhancedFocusScope.cs" />
+    <Compile Include="Helpers\FocusChecker.cs" />
     <Compile Include="Helpers\TreeViewItemExtenstions.cs" />
     <Compile Include="Messages.cs" />
     <Compile Include="Models\Education.cs" />
