--- a/Diagnosis/DiagnosisApp.csproj
+++ b/Diagnosis/DiagnosisApp.csproj
@@ -155,7 +155,7 @@
     <Compile Include="Controls\FloatSearch.xaml.cs">
       <DependentUpon>FloatSearch.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Controls\GroupsTree.xaml.cs">
+    <Compile Include="Controls\Directory\GroupsTree.xaml.cs">
       <DependentUpon>GroupsTree.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\Forms\NameEditor.xaml.cs">
@@ -164,11 +164,11 @@
     <Compile Include="Controls\Forms\SexChooser.xaml.cs">
       <DependentUpon>SexChooser.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Controls\IEditableItem.cs" />
-    <Compile Include="Controls\TileItem.xaml.cs">
+    <Compile Include="Controls\Directory\IEditableItem.cs" />
+    <Compile Include="Controls\Directory\TileItem.xaml.cs">
       <DependentUpon>TileItem.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Controls\TileView.xaml.cs">
+    <Compile Include="Controls\Directory\TileView.xaml.cs">
       <DependentUpon>TileView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\WatermarkAdorner.cs" />
@@ -193,14 +193,14 @@
     <Compile Include="Models\Property.cs" />
     <Compile Include="Models\PropertyValue.cs" />
     <Compile Include="Models\Symptom.cs" />
+    <Compile Include="Controls\Directory\TreeItem.xaml.cs">
+      <DependentUpon>TreeItem.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Screens\Card.xaml.cs">
       <DependentUpon>Card.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Controls\TreeItem.xaml.cs">
-      <DependentUpon>TreeItem.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Screens\Card2.xaml.cs">
-      <DependentUpon>Card2.xaml</DependentUpon>
+    <Compile Include="Screens\Patients.xaml.cs">
+      <DependentUpon>Patients.xaml</DependentUpon>
     </Compile>
     <Compile Include="Styles\TreeStyle.cs" />
     <Compile Include="ViewModels\AutoCompleteViewModel.cs" />
@@ -209,7 +209,7 @@
     <Compile Include="ViewModels\RelayCommand.cs" />
     <Compile Include="ViewModels\SearchViewModel.cs" />
     <Compile Include="ViewModels\SymptomViewModel.cs" />
-    <Compile Include="Controls\FullTree.xaml.cs">
+    <Compile Include="Controls\Directory\FullTree.xaml.cs">
       <DependentUpon>FullTree.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\ViewModelBase.cs" />
@@ -238,7 +238,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Controls\GroupsTree.xaml">
+    <Page Include="Controls\Directory\GroupsTree.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -250,11 +250,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Controls\TileItem.xaml">
+    <Page Include="Controls\Directory\TileItem.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Controls\TileView.xaml">
+    <Page Include="Controls\Directory\TileView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -282,11 +282,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Controls\TreeItem.xaml">
+    <Page Include="Controls\Directory\TreeItem.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Controls\FullTree.xaml">
+    <Page Include="Controls\Directory\FullTree.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
