--- a/Diagnosis/DiagnosisApp.csproj
+++ b/Diagnosis/DiagnosisApp.csproj
@@ -210,14 +210,14 @@
     <Compile Include="ViewModels\ICheckableHierarchical.cs" />
     <Compile Include="ViewModels\IHierarchical.cs" />
     <Compile Include="ViewModels\ISearchable.cs" />
-    <Compile Include="ViewModels\ISearchViewModel.cs" />
+    <Compile Include="ViewModels\ISearch.cs" />
     <Compile Include="ViewModels\PatientSearchViewModel.cs" />
     <Compile Include="ViewModels\PatientsListVewModel.cs" />
     <Compile Include="ViewModels\PropertyViewModel.cs" />
-    <Compile Include="ViewModels\SymptomExplorerViewModel.cs" />
+    <Compile Include="ViewModels\SymptomExplorer.cs" />
     <Compile Include="ViewModels\RelayCommand.cs" />
-    <Compile Include="ViewModels\SearchViewModel.cs" />
-    <Compile Include="ViewModels\SymptomSearchViewModel.cs" />
+    <Compile Include="ViewModels\SearchBase.cs" />
+    <Compile Include="ViewModels\SymptomSearch.cs" />
     <Compile Include="ViewModels\SymptomViewModel.cs" />
     <Compile Include="Controls\Directory\FullTree.xaml.cs">
       <DependentUpon>FullTree.xaml</DependentUpon>
