--- a/Diagnosis/DiagnosisApp.csproj
+++ b/Diagnosis/DiagnosisApp.csproj
@@ -204,8 +204,10 @@
     </Compile>
     <Compile Include="Styles\TreeStyle.cs" />
     <Compile Include="ViewModels\AutoCompleteViewModel.cs" />
+    <Compile Include="ViewModels\CheckableHierarchicalBase.cs" />
+    <Compile Include="ViewModels\DiagnosisSearch.cs" />
     <Compile Include="ViewModels\DiagnosisViewModel.cs" />
-    <Compile Include="ViewModels\HierarchicalBaseViewModel.cs" />
+    <Compile Include="ViewModels\HierarchicalBase.cs" />
     <Compile Include="ViewModels\ICheckable.cs" />
     <Compile Include="ViewModels\ICheckableHierarchical.cs" />
     <Compile Include="ViewModels\IHierarchical.cs" />
