--- a/Diagnosis.Data/packages.config
+++ b/Diagnosis.Data/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Iesi.Collections" version="3.3.2.4000" targetFramework="net40" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net40" />
+  <package id="NHibernate.SetForNet4" version="1.0.3" targetFramework="net40" />
 </packages>
