--- a/Diagnosis.Data/Diagnosis.Data.csproj
+++ b/Diagnosis.Data/Diagnosis.Data.csproj
@@ -123,7 +123,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Models\ModelsClassDiagram.cd" />
     <None Include="packages.config" />
+    <None Include="Repositories\RepositoriesClassDiagram.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
