--- a/Diagnosis/DiagnosisApp.csproj
+++ b/Diagnosis/DiagnosisApp.csproj
@@ -235,12 +235,14 @@
     <Compile Include="ViewModels\ICheckable.cs" />
     <Compile Include="ViewModels\IHierarchical.cs" />
     <Compile Include="ViewModels\IHierarchicalCheckable.cs" />
+    <Compile Include="ViewModels\IPropertyManager.cs" />
     <Compile Include="ViewModels\ISearchable.cs" />
     <Compile Include="ViewModels\ISearch.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\PatientSearch.cs" />
     <Compile Include="ViewModels\PatientsListVewModel.cs" />
+    <Compile Include="ViewModels\PropertyManager.cs" />
     <Compile Include="ViewModels\PropertyViewModel.cs" />
     <Compile Include="ViewModels\HierarchicalExplorer.cs" />
     <Compile Include="ViewModels\RelayCommand.cs" />
