--- a/Diagnosis/DiagnosisApp.csproj
+++ b/Diagnosis/DiagnosisApp.csproj
@@ -188,7 +188,7 @@
       <DependentUpon>SexChooser.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\Helpers\Attached.cs" />
-    <Compile Include="Extensions\FocusExtension.cs" />
+    <Compile Include="Controls\FocusExtension.cs" />
     <Compile Include="Screens\Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
@@ -220,7 +220,7 @@
     <Compile Include="Controls\Helpers\ChildFinder.cs" />
     <Compile Include="Controls\Helpers\EnhancedFocusScope.cs" />
     <Compile Include="Controls\Helpers\FocusChecker.cs" />
-    <Compile Include="Extensions\TreeViewItemExtenstions.cs" />
+    <Compile Include="Controls\TreeViewItemExtenstions.cs" />
     <Compile Include="Messages.cs" />
     <Compile Include="Controls\Directory\TreeItem.xaml.cs">
       <DependentUpon>TreeItem.xaml</DependentUpon>
@@ -402,6 +402,9 @@
       <Project>{3ec8d3df-aa44-4cb8-8847-d4b4872e9dad}</Project>
       <Name>Diagnosis.Data</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Extensions\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
