--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Diagnosis.App\packages.config" />
   <repository path="..\Diagnosis.Data\packages.config" />
   <repository path="..\Diagnosis\packages.config" />
 </repositories>
