--- a/Diagnosis.App/Diagnosis.App.csproj
+++ b/Diagnosis.App/Diagnosis.App.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Screens\Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\CoursesManager.cs" />
     <Compile Include="ViewModels\ISearchCommon.cs" />
     <Compile Include="ViewModels\SymptomsManager.cs" />
     <Compile Include="ViewModels\AppointmentViewModel.cs" />
