--- a/Diagnosis.App/Diagnosis.App.csproj
+++ b/Diagnosis.App/Diagnosis.App.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Screens\Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\HierarchicalCheckable.cs" />
     <Compile Include="ViewModels\Managers\DiagnosisManager.cs" />
     <Compile Include="ViewModels\Managers\CoursesManager.cs" />
     <Compile Include="ViewModels\Interfaces\ISearchCommon.cs" />
@@ -204,6 +205,7 @@
     <Compile Include="ViewModels\CourseViewModel.cs" />
     <Compile Include="ViewModels\DoctorViewModel.cs" />
     <Compile Include="ViewModels\EditableBase.cs" />
+    <Compile Include="ViewModels\Search\DiagnosisAutoComplete.cs" />
     <Compile Include="ViewModels\Search\HierarchicalSearch.cs" />
     <Compile Include="ViewModels\Interfaces\IEditable.cs" />
     <Compile Include="Controls\Directory\TileItem.xaml.cs">
@@ -238,7 +240,7 @@
       <DependentUpon>Patients.xaml</DependentUpon>
     </Compile>
     <Compile Include="Styles\TreeStyle.cs" />
-    <Compile Include="ViewModels\Search\AutoCompleteViewModel.cs" />
+    <Compile Include="ViewModels\Search\AutoCompleteBase.cs" />
     <Compile Include="ViewModels\CheckableBase.cs" />
     <Compile Include="ViewModels\Search\DiagnosisSearch.cs" />
     <Compile Include="ViewModels\DiagnosisViewModel.cs" />
@@ -249,6 +251,7 @@
     <Compile Include="ViewModels\Interfaces\ISearch.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
+    <Compile Include="ViewModels\Interfaces\IAutoComplete.cs" />
     <Compile Include="ViewModels\Search\PatientSearch.cs" />
     <Compile Include="ViewModels\Managers\PatientsManager.cs" />
     <Compile Include="ViewModels\Managers\PropertyManager.cs" />
@@ -256,6 +259,7 @@
     <Compile Include="ViewModels\HierarchicalExplorer.cs" />
     <Compile Include="ViewModels\RelayCommand.cs" />
     <Compile Include="ViewModels\Search\SearchBase.cs" />
+    <Compile Include="ViewModels\Search\SymptomAutoComplete.cs" />
     <Compile Include="ViewModels\Search\SymptomSearch.cs" />
     <Compile Include="ViewModels\SymptomViewModel.cs" />
     <Compile Include="Controls\Directory\FullTree.xaml.cs">
