--- a/Diagnosis.App/Diagnosis.App.csproj
+++ b/Diagnosis.App/Diagnosis.App.csproj
@@ -222,7 +222,7 @@
     <Compile Include="Converters\BoolToVis.cs" />
     <Compile Include="Converters\BoolToAligment.cs" />
     <Compile Include="Converters\MonthToString.cs" />
-    <Compile Include="Converters\CountToVisability.cs" />
+    <Compile Include="Converters\CountToVisibility.cs" />
     <Compile Include="Converters\IHierarchicalCheckableToBackground.cs" />
     <Compile Include="Converters\NegateBool.cs" />
     <Compile Include="Converters\TreeDepthToMargin.cs" />
