--- a/Diagnosis.Data/Diagnosis.Data.csproj
+++ b/Diagnosis.Data/Diagnosis.Data.csproj
@@ -85,6 +85,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Mappings\AppointmentMap.cs" />
+    <Compile Include="Mappings\SpecialityMap.cs" />
+    <Compile Include="Mappings\IcdDiseaseMap.cs" />
+    <Compile Include="Mappings\IcdBlockMap.cs" />
+    <Compile Include="Mappings\IcdChapterMap.cs" />
     <Compile Include="Mappings\DiagnosisMap.cs" />
     <Compile Include="Mappings\SymptomMap.cs" />
     <Compile Include="Mappings\HealthRecordMap.cs" />
@@ -94,7 +98,11 @@
     <Compile Include="Mappings\PropertyMap.cs" />
     <Compile Include="Mappings\PatientPropertyMap.cs" />
     <Compile Include="Mappings\PatientMap.cs" />
-    <Compile Include="Models\PatientProperty.cs" />
+    <Compile Include="Models\Speciality.cs" />
+    <Compile Include="Models\IcdChapter.cs" />
+    <Compile Include="Models\IcdBlock.cs" />
+    <Compile Include="Models\IcdDisease.cs" />
+    <Compile Include="Models\PatientRecordProperty.cs" />
     <Compile Include="NHibernate\Net4Collections.cs" />
     <Compile Include="NHibernate\NHibHelper.cs" />
     <Compile Include="Repositories\DiagnosisRepository.cs" />
