--- a/Diagnosis.Data/Diagnosis.Data.csproj
+++ b/Diagnosis.Data/Diagnosis.Data.csproj
@@ -105,6 +105,8 @@
     <Compile Include="Models\PatientRecordProperty.cs" />
     <Compile Include="NHibernate\Net4Collections.cs" />
     <Compile Include="NHibernate\NHibHelper.cs" />
+    <Compile Include="Repositories\IcdChapterRepository.cs" />
+    <Compile Include="Repositories\IcdDiseaseRepository.cs" />
     <Compile Include="Repositories\DiagnosisRepository.cs" />
     <Compile Include="Repositories\SymptomRepository.cs" />
     <Compile Include="Repositories\ModelRepository.cs" />
